@@ -873,6 +873,12 @@ namespace RCT2
                         { 46, 87 },
                     },
                     OWNERSHIP_OWNED);
+                  FixLandOwnershipTilesWithOwnership(
+                    {
+                        {  140, 58 }, {  141, 58 }, {  142, 58 }, { 143, 58 }, { 144, 58 }, { 145, 58 }, { 146, 58 }, { 147, 58 }, 
+                        {  140, 74 }, {  141, 74 }, {  142, 74 }, { 143, 74 }, { 144, 74 }, { 145, 74 }, { 146, 74 }, { 147, 74 }, 
+                    },
+                    OWNERSHIP_CONSTRUCTION_RIGHTS_OWNED, true);
                 // clang-format on
             }
             else if (
